[package]
name = "isg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
inquire = "0.7.5"
opencv = "0.93.5"
tokio = { version = "1.43.0", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["downloader"] }
chrono = "0.4.39"
